TempConv2/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tempconv2
  labels:
    app: tempconv2
